[tool.poetry]
name = "trouble_in_the_forest"
version = "0.1.0"
description = ""
authors = ["andrew-madsen <andrewrobertmadsen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
duckdb = "^0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
